# Modified-Baseline-for-Light-Field-Stitching

./: .gitattributes  CMakeLists.txt  README.md
LF_Depth/Robust Color Guided Depth Map Restoration/code/: Main.m  WMT.m  mexConstantMinMax.mexa64  mexGetColorWeight.mexa64  mexGetDepthWeight.mexa64  mexGetRelSmooth.mexa64  mexGetWeightedDepth.mexa64  run.sh
LF_Depth/epinet/: EPINET_plusX_9conv22_save.py
LF_Depth/epinet/epinet_fun/: func_makeinput.py
LF_Depth/epinet/epinet_output/: result_0430_0490(7)_9x9.pfm
LF_Stitch/.kdev4/: LFStitch_cyl.kdev4
LF_Stitch/include/: cyl_gcSeamFinder.hpp  cyl_projection.hpp  cyl_types.hpp
LF_Stitch/src/: CMakeLists.txt  cyl_fundam.cpp
LF_Stitch/test/: LFStitch_cyl.cpp  depth.cpp  resize.cpp
include/: cyl_fundam.hpp  cyl_stitch.hpp  gms_matcher.h  precomp.hpp
src/: cyl_gcSeamFinder.cpp  cyl_projection.cpp  cyl_stitch.cpp
test/: CMakeLists.txt  changename.cpp
